# quant-trade

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  pyproject.toml  requirements.lock.txt
configs/: mean_reversion_sample.yaml  sma_crossover_gld_real_daily.yaml  sma_crossover_iwm_real_daily.yaml  sma_crossover_qqq_real_daily.yaml  sma_crossover_sample.yaml  sma_crossover_spy_real_daily.yaml  sma_crossover_tlt_real_daily.yaml  sma_grid_search_sample.yaml  sma_walk_forward_sample.yaml
data/: README.md
deploy/: README.md  docker-compose.paper.example.yml  local-cloud-dry-run.sh
docs/: ARCHITECTURE.md  AUDIT_CONTROLS.md  BENCHMARK_AWARE_VERDICT.md  BROKER_INTEGRATIONS.md  CAPITAL_ALLOCATION.md  CAPITAL_RAMP_SIMULATION.md  CARRY_REAL_DATA_PIPELINE.md  CASH_AND_CARRY_PREREGISTRATION.md  CASH_AND_CARRY_RESULTS.md  CLAUDE_8H_WORKLOG.md  CLAUDE_CLOUD_RENTAL_V4_WORKLOG.md  CLAUDE_FABLE_V5_WORKLOG.md  CLAUDE_FABLE_V6_WORKLOG.md  CLOUD_DEPLOYMENT.md  CLOUD_MONITORING.md  CLOUD_PAPER_TRADING.md  CLOUD_RENTAL_FEASIBILITY.md  CLOUD_RENTAL_V4_IMPLEMENTATION_REPORT.md  CLOUD_RUNBOOK.md  COMPLIANCE_NOTES.md  CONTROL_GATES.md  COST_CONTROLS.md  CRYPTO_DATA.md  CRYPTO_MINING.md  DATA.md  DATASET_VERSIONING.md  DATA_CONTRACTS.md  DATA_LAKE.md  EVIDENCE_DATABASE.md  EXECUTION_MODEL_V2.md  EXECUTION_QUALITY.md  FINAL_8H_IMPLEMENTATION_REPORT.md  HUMAN_APPROVALS.md  INCIDENT_RESPONSE.md  LOSS_LIMITS.md  MINING_ARCHITECTURE.md  MINING_ECONOMICS.md  MINING_ECONOMICS_V2.md  MINING_OPERATIONS_SAFETY.md  MINING_TELEMETRY.md  (+33 more)
tests/: test_allocation_cli.py  test_allocation_config.py  test_allocation_correlation.py  test_allocation_governance.py  test_allocation_signals.py  test_allocation_simulator.py  test_allocators.py  test_alpaca_paper_adapter.py  test_approvals_cli.py  test_approvals_gates.py  test_approvals_models.py  test_approvals_policy.py  test_backtest_engine.py  (+136 more)
(+518 files in other folders)
