[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-trade"
version = "0.1.0"
description = "Research-grade educational backtesting and strategy evaluation toolkit"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pandas>=2.0", "numpy>=1.24", "PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4", "mypy>=1.8", "types-PyYAML"]

[project.scripts]
quant-trade = "quant_trade.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disable_error_code = ["import-untyped"]
strict = false
