[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-trade"
version = "0.1.0"
description = "Research-first quantitative trading backtesting platform foundation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "pydantic>=2.5",
  "typer>=0.12",
  "rich>=13.7",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
data = [
  "yfinance>=0.2",
  "requests>=2.31",
]

dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "mypy>=1.10",
  "pandas-stubs>=2.1",
  "types-PyYAML>=6.0",
]

[project.scripts]
quant-trade = "quant_trade.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.11"
packages = ["quant_trade"]
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true
disable_error_code = ["import-untyped"]
